# dendron-ical-integration

./: README.md  make_cal.py  pyproject.toml  requirements.txt  run_all.sh
test/output/: cal.ics  cal.json  cal.jsonl  cal.md
test/source/: cfg.json  test.md
